deploy/base/elk/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: elk
  namespace: dh-health
  labels:
    k8s-app: elk
spec:
  selector:
    matchLabels:
      k8s-app: elk
  template:
    metadata:
      labels:
        k8s-app: elk
    spec:
      terminationGracePeriodSeconds: 30
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - name: elk
        image: registry.prod.dh.unimaas.nl/docker-health/elk:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 9200 # Elasticsearch
        - containerPort: 5044 # Logstash
        - containerPort: 5601 # Kibana
