deploy/base/elk/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elk
  namespace: dh-health-ops
  labels:
    app: elk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elk
  template:
    metadata:
      labels:
        app: elk
    spec:
      containers:
      - name: elk
        image: registry.prod.dh.unimaas.nl/docker-health/elk:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 9200 # Elasticsearch
        - containerPort: 5044 # Logstash
        - containerPort: 5601 # Kibana
